# DMess

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
client/: Encoder.cpp  RecordManager.cpp  main.cpp
include/: Encoder.h  RecordManager.h
voice/: main.cpp
voice_serv/: main.cpp
